@@ -4,6 +4,9 @@
 	  - New debug functions have been added.
 	* tests/decoder.[ch], tests/test_monkey.c:
 	  - QRcode_extractBits() has been extended. This will be used later.
+	* tests/decoder.[ch]:
+	  - eccResult has been added to QRdata.
+	  - Code refactoring.
 
 2016.03.30 Kentaro Fukuchi <kentaro@fukuchi.org>
 	* bitstream.[ch], tests/test_bitstream.c:
